k8s/reader-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader
  namespace: iot-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reader
  template:
    metadata:
      labels:
        app: reader
    spec:
      containers:
        - name: reader
          image: reader:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: reader-service
  namespace: iot-project
spec:
  type: NodePort
  selector:
    app: reader
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
