k8s/reader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-service
  namespace: iot-project
spec:
  type: NodePort
  selector:
    app: reader
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
